# HCC

./: .gitignore
hirectl/: .env.example  package-lock.json  package.json  tailwind.config.js
hirectl-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
hirectl-backend/hirectl/: __init__.py  cli.py  config.py  scheduler.py  tracked_companies.py
hirectl-backend/hirectl/ai/: engine.py
hirectl-backend/hirectl/alerts/: digest.py
hirectl-backend/hirectl/analytics/: __init__.py  history.py
hirectl-backend/hirectl/api/: app.py
hirectl-backend/hirectl/automation/: __init__.py  service.py
hirectl-backend/hirectl/db/: models.py  repository.py  session.py
hirectl-backend/hirectl/ingestion/: ashby.py  base.py  career_page.py  funding.py  github_watcher.py  greenhouse.py  portfolio_boards.py  service.py  social.py  yc_jobs.py
hirectl-backend/hirectl/modeling/: __init__.py  baseline.py  features.py  service.py
hirectl-backend/hirectl/scoring/: engine.py
hirectl-backend/hirectl/signals/: __init__.py  payloads.py  stream.py
hirectl/src/app/: layout.tsx  page.tsx
hirectl/src/components/console/: AppShell.tsx  CommandStrip.tsx  CompanyDetailSheet.tsx  CompanyIntelPanel.tsx  DecisionBriefingBar.tsx  ExecutionPanel.tsx  HiringTicker.tsx  LiveSignalsFeed.tsx  NextActionPanel.tsx  OpportunityRow.tsx  ProfileSettingsSheet.tsx  RankedOpportunities.tsx  (+4 more)
hirectl/src/lib/: api.ts  data.ts  personalization.ts  scoring-engine.ts
hirectl/src/styles/: globals.css
hirectl/src/types/: index.ts
